--- a/cgit-rendering.css
+++ b/cgit-rendering.css
@@ -1,15 +1,23 @@
 .blob { display: none }
 .markdown-body {
+    border: 1px solid #ccc;
+    border-radius: 5px;
     font-size: 14px;
     line-height: 1.6;
-    margin-top: 20px;
+    margin: 0 auto;
+    margin-top: 50px;
     overflow: hidden;
+    padding: 20px 40px 20px 40px;
+    width: 80%;
 }
 .markdown-body>*:first-child {
     margin-top: 0 !important;
 }
 .markdown-body>*:last-child {
     margin-bottom: 0 !important;
+}
+.markdown-body a {
+  color: #0366d6 !important;
 }
 .markdown-body a.absent {
     color: #c00;
@@ -25,7 +33,7 @@
     bottom: 0;
 }
 .markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4, .markdown-body h5, .markdown-body h6 {
-    margin: 20px 0 10px;
+    margin: 24px 0 16px;
     padding: 0;
     font-weight: bold;
     -webkit-font-smoothing: antialiased;
